--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,6 +16,11 @@
     <div class="row justify-content-md-center mt-5">
         <div class="col-md-5 mt-5">
             <div class="card rounded-lg border-success mt-5">
+                <div class="card-header">
+                    <div class="row justify-content-center">
+                        <span class="text-dark">Please sign in</span>
+                    </div>
+                </div>
                 <div class="card-body">
                     <form action="/login" method="post">
                         <div class="form-group">
@@ -30,18 +35,19 @@
                             <input type="password" class="form-control rounded-pill" id="exampleInputPassword1"
                                    name="password">
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block rounded-pill my-4">Sign in</button>
+                        <button type="submit" class="btn btn-lg btn-primary btn-block rounded-pill my-4">Sign in
+                        </button>
                     </form>
                     <hr class="my-3">
                     <form action="/login/gitHub">
-                        <button type="submit" class="btn btn-block btn-dark btn-secondary rounded-pill mt-3">
+                        <button type="submit" class="btn btn-lg btn-block btn-dark btn-secondary rounded-pill mt-3">
                             <span class="text-capitalize">continue with <span
                                     class="font-weight-bold">GitHub</span></span></button>
                     </form>
                     <form action="/login/google">
-                        <button type="submit" class="btn btn-block btn-danger rounded-pill mt-3"><span
+                        <button type="submit" class="btn btn-lg btn-block btn-danger rounded-pill mt-3"><span
                                 class="text-capitalize">continue with <span
-                                class="font-weight-bold">google</span></span></button>
+                                class="font-weight-bold">google</span></span>
                         </button>
                     </form>
                 </div>
