--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -7,29 +7,45 @@
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
-<body>
-<div class="container mt-5">
-    <form action="/registration" class="panel" method="post">
-        <div class="form-group">
-            <label for="InputFirstName">First Name</label>
-            <input type="text" class="form-control" id="InputFirstName" name="firstName">
+<body class="bg-light">
+<div class="container">
+    <div class="row justify-content-md-center mt-5">
+        <div class="col-md-7 mt-5">
+            <div class="card rounded-lg border-success mt-5">
+                <div class="card-header">
+                    <div class="row justify-content-center">
+                        <span class="text-primary">Create new user!</span>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <form action="/registration" method="post" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <label for="InputLogin">Login</label>
+                            <input type="text" class="form-control rounded-pill" id="InputLogin" name="login">
+                        </div>
+                        <div class="form-group">
+                            <label for="InputFile">Choose Avatar</label>
+                            <input type="file" class="form-control rounded-pill" id="InputFile" name="file">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control rounded-pill" id="exampleInputEmail1" name="email"
+                                   aria-describedby="emailHelp">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                                else.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control rounded-pill" id="exampleInputPassword1"
+                                   name="password">
+                        </div>
+                        <button type="submit" class="btn btn-lg btn-block btn-primary rounded-pill mt-4">Create user
+                        </button>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="InputSecondName">Second Name</label>
-            <input type="text" class="form-control" id="InputSecondName" name="secondName">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                else.</small>
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" name="password">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    </div>
 </div>
 </body>
 </html>
