add user avatar

--- a/src/main/resources/templates/secure.html
+++ b/src/main/resources/templates/secure.html
@@ -5,7 +5,7 @@
     <title>SecurePage</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/static/main.js"></script>
 </head>
 <body ng-app="mainApp">
 <h1>This is secured page!</h1>
@@ -18,6 +18,7 @@
         <img src="{{userPic}}" class="img-thumbnail" alt="">
     </div>
 </div>
+<img src="img/C:/ProjectImages/d237dc8c-5897-4fed-93cf-792853d725bc.avengers-endgame-from-the-ashes-i72284.jpg" class="img-thumbnail" alt="">
 <form action="/logout" method="post">
     <button type="submit">Logout</button>
 </form>
