--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -25,7 +25,7 @@
                         </div>
                         <label for="customFileDiv">Avatar</label>
                         <div class="custom-file" id="customFileDiv">
-                            <input type="file" class="custom-file-input" id="customFile">
+                            <input type="file" class="custom-file-input" id="customFile" name="file">
                             <label class="custom-file-label" for="customFile">Choose file</label>
                         </div>
                         <div class="form-group">
