--- a/src/main/resources/templates/secure.html
+++ b/src/main/resources/templates/secure.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>SecurePage</title>
@@ -10,32 +10,6 @@
     <script src="/static/main.js"></script>
 </head>
 <body ng-app="mainApp">
-<nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between" ng-controller="AppCtrl">
-    <a class="navbar-brand" href="#">OAuth2Demo</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-        </ul>
-        <div>
-            <!-- Image and text -->
-
-            <form action="/logout" method="post" class="form-inline">
-                <a class="navbar-brand" href="#" ng-model="userPic">
-                    <img src="{{userPic}}" width="30" height="30"
-                         class="d-inline-block align-top" alt="">
-                    <span ng-model="user"><a href="#">{{user}}</a></span>
-                </a>
-                <button type="submit" class="btn btn-outline-success my-2 my-sm-0">Logout</button>
-            </form>
-        </div>
-    </div>
-</nav>
+<div th:include="fragments/fragments :: navigation"></div>
 </body>
 </html>
