--- a/src/main/resources/templates/secure.html
+++ b/src/main/resources/templates/secure.html
@@ -11,5 +11,7 @@
 </head>
 <body ng-app="mainApp">
 <div th:include="fragments/fragments :: navigation"></div>
+
+<h1 th:text="#{greeting}"></h1>
 </body>
 </html>
