--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -23,7 +23,11 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="http://localhost:8080/swagger-ui.html">Documentation(Rest)</a>
+                </li>
             </ul>
+
         </div>
         <div>
             <!-- Image and text -->
